Added build status to homepage

--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@ layout: home
 permalink: /
 author_profile: true
 ---
+<img src="https://travis-ci.org/javimox/javimox.github.io.svg?branch=master" alt="Build status">
 
-<h2>Welcome (back).</h2>
+<h2>Welcome (back)</h2>
 
-<p>This is my personal blog, where there's some (random) stuff about Linux administration, devops, security, etc.</p>
+<p>
+This is my personal blog, where there's some (random) stuff about Linux administration, devops, security, etc.
+You can find its source code in my <a href="https://github.com/javimox/javimox.github.io"><i class="fab fa-github"></i>repository.</a>
+</p>
 
 <p>peace.</p>
