Removed GitHub icon

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ author_profile: true
 
 <p>
 This is my personal blog, where there's some (random) stuff about Linux administration, devops, security, etc.
-You can find its source code in my <a href="https://github.com/javimox/javimox.github.io"><i class="fab fa-github"></i>repository.</a>
+You can find its source code in my <a href="https://github.com/javimox/javimox.github.io">GitHub repository</a>.
 </p>
 
 <p>peace.</p>
