--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@ layout: home
 permalink: /
 author_profile: true
 ---
-<img src="https://travis-ci.org/javimox/javimox.github.io.svg?branch=master" alt="Build status">
-
-<h2>Welcome (back)</h2>
+<h2>Welcome (back)</h2>,
 
 <p>
 This is my personal blog, where there's some (random) stuff about Linux administration, devops, security, etc.
