changed welcome message

--- a/index.html
+++ b/index.html
@@ -2,12 +2,9 @@
 layout: home
 author_profile: true
 ---
-<h2>Welcome (back)</h2>
-
 <p>
-This is my personal blog, where there's some (random) stuff about Linux administration, devops, security, etc.
-You can find its source code in my <a href="https://github.com/javimox/javimox.github.io">GitHub repository</a>.
+<a target="_blank" rel="noopener noreferrer" href="https://twitter.com/intent/tweet?text=&url=https://mox.sh&hashtags=devOps">#devOps</a>
+<a target="_blank" rel="noopener noreferrer" href="https://twitter.com/intent/tweet?text=&url=https://mox.sh&hashtags=linux">#linux</a>
+<a target="_blank" rel="noopener noreferrer" href="https://twitter.com/intent/tweet?text=&url=https://mox.sh&hashtags=infosec">#infosec</a>
+<a target="_blank" rel="noopener noreferrer" href="https://twitter.com/intent/tweet?text=&url=https://mox.sh&hashtags=peace">#peace</a>
 </p>
-
-<p>peace.</p>
-<br />
